# gold-ontology

./: .gitignore  Makefile  Pipfile  README.md  gold.obo  gold.owl  gold_definitions.csv  gold_definitions.owl  gold_definitions.yaml  gold_definitions_propagated.yaml  pyproject.toml
analeses/: goldpaths_to_triads_by_proportion.tsv
analyses/: goldpaths_to_triads_by_proportion.ipynb
conf/: lexmatch-config.yaml
config/: envo_weights.pro  gold-env-synonyms.tsv  prefixes.ttl  prefixes.yaml
gold_ontology/: create_template.py  gold_transform.py
imports/: envo_import.owl  fao_import.owl  foodon_import.owl  mixs_import.owl  ncbitaxon_import.owl  obi_import.owl  po_import.owl  seed.txt
mappings/: filtered-gold-to-obo.sssom.tsv  gold-to-chebi.curated.sssom.tsv  gold-to-envo.curated.sssom.tsv  gold-to-envo.sssom-curated.tsv  gold-to-fao.curated.sssom.tsv  gold-to-foodon.curated.sssom.tsv  gold-to-mixs.curated.sssom.tsv  gold-to-ncbitaxon.curated.sssom.tsv  gold-to-obi.curated.sssom.tsv  gold-to-obo.sssom.tsv  gold-to-pato.curated.sssom.tsv  gold-to-po.curated.sssom.tsv  gold-to-uberon.curated.sssom.tsv  goldvocab-to-envo.curated.sssom.tsv  nomatch-gold-to-obo.sssom.tsv
notebooks/: gold-path-mixs-triad-counts.ipynb  gold-path-mixs-triad-counts.tsv  goldpaths_to_triads_by_proportion.ipynb  gp_mixs_proportional_explanation.tsv  soil_sediment_plant-associated_triad_counts_README.md
sparql/: seed.rq
terms/: surfaces.yaml
tests/: test_convert.py
tests/inputs/: goldpaths.tsv
